Edited content of c.html

--- a/c.html
+++ b/c.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>This is content of c.html</h1>
+<h1>This is content of c.html edited</h1>
 <p>This is a paragraph.</p>
 
 </body>
